# yemenhr-rss-bot

./: .env.sample  .gitignore  Dockerfile  GEMINI.md  QWEN.md  README.md  README.zh.md  SUPABASE_SETUP.md  app.json  docker-compose.yml.sample  pyproject.toml  requirements.txt  setup.cfg  tree.txt
.github/: dependabot.yml
.github/workflows/: basic-ci.yml  codeql.yml  dependabot-auto-merge.yml  gemini-triage.yml  pr-test-docker-build.yml  publish-docker-image.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  rough-test.yml  security-monitoring.yml
.qoder/rules/: git-commit-after-changes.md
.yemen-hr/: job-details.md  jobs.md
docs/: README.md  advanced-settings.md  database-architecture.md  database-migration-technical.md  database-user-guide.md  default-subscriptions.md  deployment-guide.md  translation-guide.md
src/: entrypoint.py  locks.py  log.py  opml_template.opml  redirect_server.py  version.py
src/command/: misc.py  utils.py
src/command/inner/: sub.py
src/db/: models.py
src/helpers/bg/: _common.py
src/i18n/: ar.json  en.json
src/monitor/: _common.py
src/parsing/: medium.py  message.py  tgraph.py  utils.py
src/web/: utils.py
