[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yemenhr"
dynamic = ["version"]

description = "YemenHR - A Telegram RSS bot for Yemen jobs and tenders"
readme = "README.md"
authors = [{name = "Eng. Dawood", email = "davidhormos@gmail.com"}]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Multimedia",
]
dependencies = [
    # telegram and telegraph
    "cryptg==0.5.0.post0",
    "telethon==1.40.0",
    "aiographfix==0.2.2",
    
    # feed parsing
    "feedparser==6.0.11",  # feedparser@git+https://github.com/EngDawood/feedparser.git@develop
    "listparser[lxml]==0.20",
    "pillow==11.3.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.4.0",
    "rapidfuzz==3.13.0",
    "emoji==2.14.1",
    "minify-html==0.16.4",
    "minify-html-onepass==0.16.4",
    "matplotlib==3.9.4",
    
    # db
    "asyncpg==0.30.0",
    "tortoise-orm[accel]==0.25.1",
    "aerich==0.8.1",
    
    # network
    "aiohttp[speedups]==3.12.14",
    "aiohttp-socks==0.10.1",
    "aiohttp-retry==2.9.1",
    "python-socks[asyncio]==2.7.1",
    "dnspython[idna]==2.7.0",
    
    # utils
    "yarl==1.20.1",
    "propcache==0.3.2",
    "colorlog==6.9.0",
    "APScheduler==3.11.0",
    "python-dotenv==1.1.1",
    "multidict==6.6.3",
    "asyncstdlib==3.13.1",
    "cachetools==6.1.0",
    "CJKwrap==2.2",
    "typing-extensions==4.14.1",
    "uvloop==0.21.0; sys_platform!='win32' and sys_platform!='cygwin' and sys_platform!='cli'",
    "isal==1.7.2; platform_machine=='x86_64' or platform_machine=='AMD64' or platform_machine=='aarch64'",
]

[project.urls]
Homepage = "https://github.com/EngDawood/yemenhr-rss-bot"
Source = "https://github.com/EngDawood/yemenhr-rss-bot"
Issues = "https://github.com/EngDawood/yemenhr-rss-bot/issues"

[tool.hatch.version]
path = "src/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/requirements.txt",
    "/README.md",
    "/LICENSE"
]