[metadata]

name = yemenhr
author = Eng. Dawood
author_email = eng.dawood@example.com
description = YemenHR - A Telegram RSS bot for Yemen jobs and tenders
long_description = file: README.md
long_description_content_type = text/markdown
license = OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
platforms = Linux, Windows, MacOS
url = https://github.com/EngDawood/yemenhr-rss-bot
project_urls =
    Bug Tracker = https://github.com/EngDawood/yemenhr-rss-bot/issues
    Source Code = https://github.com/EngDawood/yemenhr-rss-bot
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: AsyncIO
    Framework :: aiohttp
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications :: Chat
    Topic :: Internet
    Topic :: Multimedia

[options]
zip_safe = False
python_requires = >=3.9

[options.package_data]
* = *.json, *.opml, *.sql, *.txt
yemenhr = ../requirements.txt
